--- a/package/ctcgfw/openwrt-v2ray-plugin/Makefile
+++ b/package/ctcgfw/openwrt-v2ray-plugin/Makefile
@@ -41,8 +41,7 @@ endef
 
 ifeq ($(CONFIG_$(PKG_NAME)_INCLUDE_GOPROXY),y)
 export GO111MODULE=on
-export GOPROXY=https://goproxy.cn
-#export GOPROXY=https://goproxy.io
+export GOPROXY=https://goproxy.io
 #export GOPROXY=https://mirrors.aliyun.com/goproxy/
 endif
 
