treewide: add missing PKG_HASH / PKG_MIRROR_HASH
Signed-off-by: CN_SZTL <cnsztl@project-openwrt.eu.org>

--- a/package/ctcgfw/luci-app-diskman/Makefile
+++ b/package/ctcgfw/luci-app-diskman/Makefile
@@ -1,13 +1,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-diskman
-PKG_VERSION:=v0.2.10
+PKG_VERSION:=v0.2.11
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-diskman>
 PKG_LICENSE:=AGPL-3.0
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/lisaac/luci-app-diskman.git
+PKG_MIRROR_HASH:=b5ece7cb3918b9ca7ea0aabbf2e7b637ebf2b71ea2654117065c57079fad7df3
 PKG_SOURCE_VERSION:=$(PKG_VERSION)
 
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
