--- a/package/lean/pdnsd-alt/Makefile
+++ b/package/lean/pdnsd-alt/Makefile
@@ -2,7 +2,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=pdnsd
 PKG_VERSION:=1.2.9b-par
-PKG_RELEASE=:a8e46ccba7b0fa2230d6c42ab6dcd92926f6c21d
+PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/shadowsocks/pdnsd.git
