ddns-scripts_aliyun/dnspod: rename service files

--- a/package/lean/ddns-scripts_aliyun/Makefile
+++ b/package/lean/ddns-scripts_aliyun/Makefile
@@ -33,7 +33,7 @@ endef
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/lib/ddns $(1)/usr/share/ddns/default
 	$(INSTALL_BIN) $(CURDIR)/files/update_aliyun_com.sh $(1)/usr/lib/ddns
-	$(INSTALL_DATA) $(CURDIR)/files/aliyun_com.json $(1)/usr/share/ddns/default
+	$(INSTALL_DATA) $(CURDIR)/files/aliyun.com.json $(1)/usr/share/ddns/default
 endef
 
 define Package/$(PKG_NAME)/prerm
