--- a/package/ctcgfw/sub-web/Makefile
+++ b/package/ctcgfw/sub-web/Makefile
@@ -9,19 +9,18 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=sub-web
 PKG_VERSION:=1.0.0
-PKG_RELEASE:=4
+PKG_RELEASE:=5
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/CareyWang/sub-web.git
 PKG_SOURCE_DATE:=2021-01-07
 PKG_SOURCE_VERSION:=26d278800cc42025f8ceecff64b26f47b9fc2d14
-PKG_MIRROR_HASH:=3de3d95a04b0e4596e86581f2e066fa40d140c29709307ee97acd6893a0d5602
+PKG_MIRROR_HASH:=a83f49aeecfa086ad8da3503b1ff95f8505845588839ed569d22fb0ced417b9f
 
 PKG_LICENSE:=MIT
 PKG_LICENSE_FILES:=LICENSE
 PKG_MAINTAINER:=CN_SZTL <cnsztl@project-openwrt.eu.org>
 
-PKG_ARCH:=all
 PKG_BUILD_DEPENDS:=node/host node-yarn/host
 
 include $(INCLUDE_DIR)/package.mk
@@ -32,6 +31,7 @@ define Package/sub-web
   URL:=https://github.com/CareyWang/sub-web
   TITLE:=A WebUI for generating proxy subscription url
   DEPENDS:=+subconverter
+  PKGARCH:=all
 endef
 
 define Package/sub-web/description
