ipt2socks-alt: fix build dir
Fixes: dca292d0f1ee3b488b63e4884bb1a92ef38831da ("ipt2socks-alt: add package")

Signed-off-by: CN_SZTL <cnsztl@project-openwrt.eu.org>

--- a/package/ctcgfw/ipt2socks-alt/Makefile
+++ b/package/ctcgfw/ipt2socks-alt/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/zfl9/ipt2socks/tar.gz/v$(PKG_VERSION)?
 PKG_HASH:=f247d72b61b1f40ce347904c43523bff257fc9f00ff269ecccf06f1d0f4b9d5e
 
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(firstword $(subst -, ,$(PKG_NAME)))-$(PKG_VERSION)
 PKG_BUILD_PARALLEL:=1
 PKG_INSTALL:=1
 
