--- a/package/ctcgfw/rtl8188eu/Makefile
+++ b/package/ctcgfw/rtl8188eu/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rtl8188eu
-PKG_RELEASE=1
+PKG_RELEASE:=1
 
 PKG_SOURCE_URL:=https://github.com/aircrack-ng/rtl8188eus.git
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2020-08-01
-PKG_SOURCE_VERSION:=ae1d233fe6a34a321ca1da2202bec34b1a4b41cd
-PKG_MIRROR_HASH:=995d021dec4bef7ce5227239b64aee88ea6d1002464bc7a62cc2ed766607ea89
+PKG_SOURCE_DATE:=2021-02-06
+PKG_SOURCE_VERSION:=1e7145f3237b3eeb3baf775f4a883e6d79c1cfe6
+PKG_MIRROR_HASH:=3f68779aed2b9fabca042ea4effbdf35e25e632a00febe6c3f09646a8c75ee5d
 
 PKG_BUILD_PARALLEL:=1
 
@@ -45,7 +45,8 @@ EXTRA_CFLAGS:= \
 	-DRTW_SINGLE_WIPHY \
 	-DRTW_USE_CFG80211_STA_EVENT \
 	-DCONFIG_IOCTL_CFG80211 \
-	-DCONFIG_CONCURRENT_MODE
+	-DCONFIG_CONCURRENT_MODE \
+	-DBUILD_OPENWRT
 
 ifeq ($(CONFIG_BIG_ENDIAN),y)
 EXTRA_CFLAGS += -DCONFIG_BIG_ENDIAN
