luci-app-ssr-plus: fix dependencies
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/lean/luci-app-ssr-plus/Makefile
+++ b/package/lean/luci-app-ssr-plus/Makefile
@@ -56,7 +56,8 @@ config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks
 	default y
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Rust
-	bool "Include Shadowsocks Rust"
+	bool "Include Shadowsocks Rust (AEAD cipher only)"
+	depends on aarch64||arm||i386||mips||mipsel||x86_64
 	default y if aarch64||x86_64
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR
