x86: add PVE image build
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit c9344d6a6a424d7152fc8d01f9a09eed5912487a)

--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -243,6 +243,13 @@ menu "Target Images"
 		depends on GRUB_IMAGES || GRUB_EFI_IMAGES
 		default y if BUILDBOT
 
+	config QCOW2_IMAGES
+		bool "Build PVE/KVM image files (QCOW2)"
+		depends on TARGET_x86
+		depends on GRUB_IMAGES || GRUB_EFI_IMAGES
+		select PACKAGE_kmod-e1000
+		default y if BUILDBOT
+
 	config VDI_IMAGES
 		bool "Build VirtualBox image files (VDI)"
 		depends on TARGET_x86
