r8152: drop led configuration patch
This makes those annoying loud noises go away, and this
commit should not be reverted. If you have any questions,
please contact the manufacturer.

--- a/package/kernel/r8152/Makefile
+++ b/package/kernel/r8152/Makefile
@@ -1,8 +1,7 @@
-#Download realtek r8152 linux driver from official site [https://www.realtek.com/en/component/zoo/category/network-interface-controllers-10-100-1000m-gigabit-ethernet-usb-3-0-software]
-#Unpack source file
-#Replace orginal Makefile with this file
-#Put this source to 'package' folder of OpenWRT/LEDE SDK
-#Build(make menuconfig, make defconfig, make)
+#
+# Download realtek r8152 linux driver from official site:
+# [https://www.realtek.com/en/component/zoo/category/network-interface-controllers-10-100-1000m-gigabit-ethernet-usb-3-0-software]
+#
 
 include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
@@ -27,7 +26,7 @@ define KernelPackage/usb-net-rtl8152-vendor
   TITLE:=Kernel module for USB-to-Ethernet Realtek convertors
   SUBMENU:=USB Support
   VERSION:=$(LINUX_VERSION)+$(PKG_VERSION)-$(BOARD)-$(PKG_RELEASE)
-  DEPENDS:=+kmod-usb-net
+  DEPENDS:=@TARGET_x86 +kmod-usb-net
   CONFLICTS:=kmod-usb-net-rtl8152
   FILES:= $(PKG_BUILD_DIR)/r8152.ko
   AUTOLOAD:=$(call AutoProbe,r8152)
