automount: fix typo error
Fixes: #777

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/emortal/automount/Makefile
+++ b/package/emortal/automount/Makefile
@@ -25,7 +25,7 @@ define Package/automount
     +!TARGET_ramips:kmod-usb-storage-uas \
     +kmod-fs-ext4 \
     +kmod-fs-exfat \
-    +kmod-fs-vfat
+    +kmod-fs-vfat \
     +ntfs3-mount
   PKGARCH:=all
 endef
