autocore: use mhz to calc cpufreq for mvebu
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit 8a690d4bd4e133e4f3897787fd9c0827952525a8)

--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -11,7 +11,8 @@ PKG_RELEASE:=$(COMMITCOUNT)
 
 PKG_CONFIG_DEPENDS:= \
 	CONFIG_TARGET_bcm27xx \
-	CONFIG_TARGET_bcm53xx
+	CONFIG_TARGET_bcm53xx \
+	CONFIG_TARGET_mvebu
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/target.mk
@@ -21,7 +22,8 @@ define Package/autocore-arm
   MAINTAINER:=CN_SZTL
   DEPENDS:=@(arm||aarch64) \
     +TARGET_bcm27xx:bcm27xx-userland \
-    +TARGET_bcm53xx:nvram
+    +TARGET_bcm53xx:nvram \
+    +TARGET_mvebu:mhz
   VARIANT:=arm
 endef
 
